# Include this directory
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

# Enumerate source files
FILE(GLOB SRC_FILES *.cpp *.inl)
FILE(GLOB INC_FILES *.h)

SET(DEPENDENT_LIBS "")

# GeoGram
IF (GEOGRAM_FOUND)
    INCLUDE_DIRECTORIES(${GEOGRAM_INCLUDE_DIRS})
    LIST(APPEND DEPENDENT_LIBS ${GEOGRAM_LIBRARIES})
    ADD_DEFINITIONS(-DWITH_GEOGRAM)
ENDIF (GEOGRAM_FOUND)

ADD_LIBRARY(lib_geogram_base SHARED ${SRC_FILES} ${INC_FILES})
TARGET_LINK_LIBRARIES(lib_geogram_base ${DEPENDENT_LIBS})
